fix: remove banner on smaller screens

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -343,4 +343,8 @@ body {
     .nav {
         gap: 16px;
     }
+    
+    .logo-text {
+        display: none;
+    }
 }
